objects/pw_cc__TimeZone__c.object
<CustomObject>
    <description>A basic representation of IANA Time Zone information.  For more info see http://www.iana.org/time-zones</description>
    <fields>
        <fullName>pw_cc__Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__UtcOffsetDst__c</fullName>
        <inlineHelpText>The difference (in hours) from UTC as at 1st Jul.
Note that the UTC DST offset is different from the UTC offset for zones where daylight saving time is observed</inlineHelpText>
        <label>UTC Offset DST</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__UtcOffsetMidYear__c</fullName>
        <inlineHelpText>The difference (in hours) from UTC as at 1st Jul.
Note that the UTC Mid Year offset is different from the UTC offset for zones where daylight saving time is observed</inlineHelpText>
        <label>UTC Offset Mid Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__UtcOffset__c</fullName>
        <inlineHelpText>This is the difference (in hours) from UTC on 1st Jan</inlineHelpText>
        <label>UTC Offset</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Zone</label>
    <listViews>
        <fullName>pw_cc__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>pw_cc__UtcOffset__c</columns>
        <columns>pw_cc__UtcOffsetMidYear__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Zone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>